Bug 1814785: Include the transform only for the frame itself in the a11y cache, rather than calculating it relative to an ancestor. r=morgan

Calculating it relative to an ancestor causes problems when the frame ancestry and the a11y ancestry diverge.
For example, this can happen for a transform which is also position: absolute.
In that case, the parent Accessible's frame is not an ancestor of the child Accessible's frame.
Since the transform is no longer relative to the ancestor, we no longer need to remove our parent-relative bounds before applying it.
However, we do need to ensure that we apply the transform *before* adding parent-relative bounds.

Differential Revision: https://phabricator.services.mozilla.com/D169059