accessible/generic/LocalAccessible.cpp
@@ -53,6 +53,7 @@
 #include "nsIContent.h"
 #include "nsIFormControl.h"
 
+#include "nsDisplayList.h"
 #include "nsLayoutUtils.h"
 #include "nsPresContext.h"
 #include "nsIFrame.h"
@@ -3478,16 +3479,12 @@ already_AddRefed<AccAttributes> LocalAccessible::BundleFieldsForCache(
   if (aCacheDomain & CacheDomain::TransformMatrix) {
     bool transformed = false;
     if (frame && frame->IsTransformed()) {
-      // We need to find a frame to make our transform relative to.
-      // It's important this frame have a corresponding accessible,
-      // because this transform is applied while walking the accessibility
-      // tree (in the parent process), not the frame tree.
-      nsIFrame* boundingFrame = FindNearestAccessibleAncestorFrame();
       // This matrix is only valid when applied to CSSPixel points/rects
-      // in the coordinate space of `frame`. It also includes the translation
-      // to the parent space.
-      gfx::Matrix4x4Flagged mtx = nsLayoutUtils::GetTransformToAncestor(
-          RelativeTo{frame}, RelativeTo{boundingFrame}, nsIFrame::IN_CSS_UNITS);
+      // in the coordinate space of `frame`.
+      gfx::Matrix4x4 mtx = nsDisplayTransform::GetResultingTransformMatrix(
+          frame, nsPoint(0, 0), AppUnitsPerCSSPixel(),
+          nsDisplayTransform::INCLUDE_PERSPECTIVE |
+              nsDisplayTransform::OFFSET_BY_ORIGIN);
       // We might get back the identity matrix. This can happen if there is no
       // actual transform. For example, if an element has
       // will-change: transform, nsIFrame::IsTransformed will return true, but
@@ -3496,8 +3493,7 @@ already_AddRefed<AccAttributes> LocalAccessible::BundleFieldsForCache(
       // point caching it.
       transformed = !mtx.IsIdentity();
       if (transformed) {
-        UniquePtr<gfx::Matrix4x4> ptr =
-            MakeUnique<gfx::Matrix4x4>(mtx.GetMatrix());
+        UniquePtr<gfx::Matrix4x4> ptr = MakeUnique<gfx::Matrix4x4>(mtx);
         fields->SetAttribute(nsGkAtoms::transform, std::move(ptr));
       }
     }
